<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/bg"
    android:id="@+id/layout"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/holiday_checker"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_30sdp"
        android:id="@+id/title"
        android:gravity="center"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="sans-serif-condensed-medium"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="@dimen/_25sdp"
        android:id="@+id/txt"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="sans-serif-condensed-light"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Lemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_outline_email_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor = "#7C88B1"
        app:boxStrokeWidth="1dp"
        app:boxCornerRadiusTopStart="@dimen/_5sdp"
        app:boxCornerRadiusTopEnd="@dimen/_5sdp"
        app:boxCornerRadiusBottomStart="@dimen/_5sdp"
        app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
        app:endIconTint="#97A0C3"
        app:hintTextColor="@color/hint"
        android:textColorHint = "@color/hint"
        app:hintTextAppearance="@style/TextAppearance.App.Caption"
        app:boxBackgroundColor = "@color/white"
        android:hint="@string/email_address">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            android:textSize="@dimen/_13sdp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Lpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Lemail"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:boxStrokeWidth="1dp"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor = "#7C88B1"
        app:boxCornerRadiusTopStart="@dimen/_5sdp"
        app:boxCornerRadiusTopEnd="@dimen/_5sdp"
        app:boxCornerRadiusBottomStart="@dimen/_5sdp"
        app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
        app:endIconTint="#97A0C3"
        app:hintTextColor="@color/hint"
        android:textColorHint = "@color/hint"
        app:hintTextAppearance="@style/TextAppearance.App.Caption"
        app:boxBackgroundColor = "@color/white"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:id="@+id/password"
            android:textSize="@dimen/_13sdp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:backgroundTint="@color/colorPrimary"
        android:id="@+id/btnSignin"
        android:text="@string/sign_in_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Lpassword"
        android:fontFamily="sans-serif-condensed-medium"
        app:cornerRadius="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"
        android:padding="@dimen/_10sdp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:enabled="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>